--- a/free-c2/index.html
+++ b/free-c2/index.html
@@ -179,7 +179,7 @@
     </div>
 
     <div id="jumpscare">
-        <video id="jumpscareVideo" src="/path-to-your-jumpscare-video.mp4" muted></video>
+        <video id="jumpscareVideo" src="tos.mp4" muted></video>
     </div>
 
     <script>
